apps/temporal/server/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: temporal
  namespace: temporal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: temporal
  ingress:
  - fromNodes:
    - matchLabels:
        kubernetes.io/hostname: hestia
    toPorts:
    - ports:
      - port: "7233"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: temporal
        app.kubernetes.io/name: temporal
    toPorts:
    - ports:
      - {port: "6933", protocol: TCP}
      - {port: "6934", protocol: TCP}
      - {port: "6935", protocol: TCP}
      - {port: "6939", protocol: TCP}
      - {port: "7233", protocol: TCP}
      - {port: "7234", protocol: TCP}
      - {port: "7235", protocol: TCP}
      - {port: "7243", protocol: TCP}
      - {port: "9090", protocol: TCP}
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: default
        app.kubernetes.io/instance: victoriametrics
    toPorts:
    - ports:
      - {port: "9090", protocol: TCP}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: temporal
        app.kubernetes.io/name: temporal
    toPorts:
    - ports:
      - {port: "6933", protocol: TCP}
      - {port: "6934", protocol: TCP}
      - {port: "6935", protocol: TCP}
      - {port: "6939", protocol: TCP}
      - {port: "7233", protocol: TCP}
      - {port: "7234", protocol: TCP}
      - {port: "7235", protocol: TCP}
      - {port: "7243", protocol: TCP}
      - {port: "9090", protocol: TCP}
  - toCIDR:
    - 192.168.1.10/32
    toPorts:
    - ports:
      - port: "5433"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:io.cilium.k8s.policy.serviceaccount: coredns
    toPorts:
    - ports:
      - {port: "53", protocol: UDP}
      - {port: "53", protocol: TCP}
      rules:
        dns:
        - matchPattern: "*.cluster.local"
